[FIX] web: CopyClipboard field css tweak
Remove overlapping bottom border of the input since the field is boxed.
Add 4px of left padding to the input not to have the cursor overlapping
the box and feel crowded.
Remove the "action" button left border radius.

closes odoo/odoo#124150

--- a/addons/web/static/src/views/fields/copy_clipboard/copy_clipboard_field.scss
+++ b/addons/web/static/src/views/fields/copy_clipboard/copy_clipboard_field.scss
@@ -6,6 +6,15 @@
         color: $o-brand-primary;
         font-weight: $badge-font-weight;
 
+        .o_input {
+            border: none;
+            padding-left: 4px;
+        }
+        .o_clipboard_button {
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
         > span:first-child, a {
             margin-left: 4px;
             margin-right: 4px;
